# blok

./: .gitignore  .gitlab-ci.yml  .nxignore  .travis.yml  AGENTS.md  BACKLOG.md  BLOK_FRAMEWORK_FIXES.md  CHANGELOG.md  CLAUDE.md  COMMUNITY.md  CONTRIBUTING.md  DAY3_SUMMARY.md  DAY4_PLAN.md  HTTP-BINARY-RESPONSE-GAPS.md  INSTRUCTIONS.md  Jenkinsfile  LOAD-TESTS.md  MANUAL.md  MIGRATION_GUIDE.md  Makefile  PHASE_1B_COMPLETE.md  PHASE_1C_COMPLETE.md  PHASE_1D_DAY1_PROGRESS.md  PHASE_1D_DAY2_PROGRESS.md  PHASE_1D_DAY3_PROGRESS.md  PHASE_1D_PLAN.md  PHASE_1D_UNIT_TESTS_COMPLETE.md  PHASE_2A_COMPLETE.md  PHASE_2B_COMPLETE.md  PROGRESS-runtime-versions.md  PROGRESS.md  README.md  REBRADING_ROADMAP.md  REVIEW.md  ROADMAP-runtime-versions.md  ROADMAP.md  SESSION_PHASE_2B_SUMMARY.md  SPEC-blok-client-sdk.md  SPEC-node-structure-unification.md  SSE-STREAMING-RUNTIME-GAPS.md  (+21 more)
.changeset/: bump-cli-template-v0.3.0.md  bump-cli-template-v0.4.0.md  selective-retry-non-retryable-error-names.md  v04-explicit-path-routing.md
.circleci/: config.yml
.claude/: launch.json
.claude/skills/: blok-framework.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  cross-runtime.yml  integration.yml  license-check.yml  perf-regression.yml  post-publish-smoke.yml  scaffold-smoke.yml  security-scan.yml  test-cli.yml
.husky/: pre-push
apps/studio/: CLAUDE.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
benchmarks/: memory-check.mjs  runner-benchmark.mjs
core/core/: CHANGELOG.md  package.json  tsconfig.json
core/runner/: CHANGELOG.md  CLAUDE.md  FUNCTION_FIRST_NODES.md  RUNTIME_ADAPTER_EXAMPLE.md  nodemon.json  package.json  tsconfig.json  tsconfig.typetest.json  vitest.config.ts  vitest.integration.config.ts
core/shared/: CHANGELOG.md  package.json  tsconfig.json  vitest.config.ts
core/workflow-helper/: CHANGELOG.md  package.json  tsconfig.json
dockerfiles/: Dockerfile  Dockerfile.deploy.http  Dockerfile.node
docs/: OBSERVABILITY.md  best-practices.md  changelog.mdx  docs.json  error-codes.md  error-handling.md  workflow-v2.md
docs/architecture/: observability.md  runtime-adapters.md  security-model.md  trigger-system.md
docs/compliance/: GDPR.md  HIPAA.md  ISO27001.md  SECURITY-HARDENING.md  SOC2.md
docs/migration/: class-to-function.md  single-to-multi-runtime.md
docs/snippets/: studio-mocks.jsx
docs/testing/: real-e2e-matrix.md
documentation/: DOCS_PROGRESS.md  DOCS_ROADMAP.md  PLAN_PYTHON_SDK_MIGRATION.md
documentation/modules/: advanced.md  cli.md  core-runner.md  core-shared.md  define-node.md  deployment.md  ide.md  nodes.md  observability.md  overview.md  runtime-adapters.md  sdks.md  security.md  testing.md  triggers.md  workflow-helper.md
documentation/quick-start/: SETUP_GUIDE.md
documentation/structure/: AI_INDEX.md  SITE_MAP.md
examples/integrations/: aws-s3-upload.json  sendgrid-email.json  stripe-payment.json
examples/runtimes/rust/: Cargo.toml  Dockerfile
examples/runtimes/rust/proto/: node.proto
examples/runtimes/rust/src/: grpc_server.rs  lib.rs  main.rs  node.rs  registry.rs  server.rs  types.rs
examples/runtimes/rust/src/nodes/: hello_world.rs
examples/ts-workflows/: mcp-greeter.ts  runtime-csharp-hello.ts  runtime-go-hello.ts  runtime-java-hello.ts  runtime-php-hello.ts  runtime-python3-hello.ts  runtime-ruby-hello.ts  runtime-rust-hello.ts
examples/v05-primitives/: 01-order-fulfillment.json  02-async-job-poller.json  README.md  (+13 more)
infra/: docker-compose.production.yml
new-version-docs/: Blok-Language-Agnostic-Plan.md  Draft-Runner-that-Fits-on-Current-Blok-Runner.md  Function-First-Implementation-Instructions.md  Function‑first---Zod‑first-system-prompt-for-your-AI-Node-generator.md  New-Function-First-Nodes-Logic.md  Trigger-Details.md  Trigger-System-Prompt.md  Workflows-Typescript-Structure-Details.md
scripts/: ci-local.sh  dev-full.ts  integration-test.sh  release-preflight.ts  release.ts  sdks-build.sh  sync-proto.ts  v05-smoke.ts
sdks/: CLAUDE.md
sdks/python3/: Dockerfile  pyproject.toml  requirements.txt
sdks/python3/blok/: __init__.py
sdks/python3/blok/config/: __init__.py  server_config.py
sdks/python3/blok/errors/: __init__.py  blok_error.py
sdks/python3/blok/logging/: __init__.py  logger.py
sdks/python3/blok/middleware/: __init__.py  logging_middleware.py  recovery_middleware.py
sdks/python3/blok/node/: __init__.py  define_node.py  node_handler.py  node_registry.py
sdks/python3/blok/runtime/v1/: runtime_pb2.py  runtime_pb2_grpc.py
sdks/python3/blok/server/: __init__.py  grpc_server.py  runtime_server.py
sdks/python3/blok/types/: __init__.py  context.py  execution_request.py
sdks/python3/blok/worker/: __init__.py  job_message.py  worker.py  worker_config.py
sdks/python3/examples/: __init__.py  api_call_node.py  blok_error_demo_node.py  chain_test_node.py  hello_world_node.py  transform_data_node.py  typed_greet_node.py
sdks/python3/nanoservice/: __init__.py
sdks/python3/nanoservice/config/: __init__.py  server_config.py
sdks/python3/nanoservice/errors/: __init__.py  node_error.py
sdks/python3/nanoservice/logging/: __init__.py
sdks/python3/nanoservice/middleware/: __init__.py  logging_middleware.py  recovery_middleware.py
sdks/python3/nanoservice/node/: __init__.py  node_handler.py  node_registry.py
sdks/python3/nanoservice/server/: __init__.py  runtime_server.py
sdks/python3/nanoservice/types/: __init__.py  execution_request.py  execution_result.py
sdks/python3/tests/: test_blok_error.py  test_define_node.py  test_discovery.py  test_grpc_codec.py  test_grpc_server.py
sdks/rust/: Cargo.toml  Dockerfile  README.md  build.rs
sdks/rust/src/: blok_error.rs  config.rs  errors.rs  grpc_server.rs  lib.rs  logging.rs  main.rs  middleware.rs  node.rs  registry.rs  server.rs  testing.rs  types.rs  validation.rs  worker.rs
sdks/rust/src/nodes/: api_call.rs  blok_error_demo.rs  chain_test.rs  hello_world.rs  mod.rs  transform_data.rs  typed_greet.rs
sdks/rust/src/user_nodes/: mod.rs
sdks/rust/tests/: grpc_integration.rs  typed_node.rs
(+1742 files in other folders)
