[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blok-blok-python3"
version = "1.0.0"
description = "Blok Blok SDK for Python 3 — build workflow nodes as HTTP microservices"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
worker = ["nats-py>=2.9.0"]

[project.scripts]
blok-serve = "bin.serve:main"
blok-worker = "bin.worker:main"

[tool.setuptools.packages.find]
include = ["blok*"]
