[package]
name = "blok-rust-runtime"
version = "1.0.0"
edition = "2021"
description = "Blok Runtime SDK for Rust - Execute workflow nodes in Rust"
license = "MIT"
repository = "https://github.com/deskree-inc/blok"
keywords = ["blok", "workflow", "runtime", "nanoservice"]

[[bin]]
name = "blok-runtime"
path = "src/main.rs"

[lib]
name = "blok"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# gRPC server
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
async-trait = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

[build-dependencies]
tonic-build = "0.12"
